--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="container-fluid mt-4">
             <h3><strong>"24" Web Topics Found</strong></h3>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5 row-cols-xxxl-6">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-5 row-cols-xxl-6">
                 <div class="col p-3">
                     <div class="card border-0 shadow-sm">
                         <img src="assets\Logos\html.png" class="card-img-top" alt="HTML">
